[gd_scene load_steps=7 format=3 uid="uid://bow7knnlrhrii"]

[ext_resource type="Texture2D" uid="uid://d3p5cw3v7i4o8" path="res://Assets/Imagem/Plataformas/falling-platform-brown.png" id="1_v7abv"]
[ext_resource type="Script" path="res://Scripts/Objetos/plataforma_pode_cair.gd" id="1_x383e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ta3hv"]
size = Vector2(32, 16)

[sub_resource type="Animation" id="Animation_wq8oe"]
resource_name = "shake"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2, 0), Vector2(0, 0), Vector2(-2, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_n4qbg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cd5ps"]
_data = {
"RESET": SubResource("Animation_n4qbg"),
"shake": SubResource("Animation_wq8oe")
}

[node name="Plataforma_PodeCair" type="AnimatableBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_x383e")

[node name="texture" type="Sprite2D" parent="."]
texture = ExtResource("1_v7abv")

[node name="collision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_ta3hv")
one_way_collision = true

[node name="respaw_time" type="Timer" parent="."]

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cd5ps")
}

[connection signal="timeout" from="respaw_time" to="." method="_on_respaw_time_timeout"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
